--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#22320E",
         "titleBar.activeBackground": "#304614",
         "titleBar.activeForeground": "#F7FBF1"
+    },
+    "exclude":{
+        ".git":false
     }
 }
